--- a/app/scss/modules/home.scss
+++ b/app/scss/modules/home.scss
@@ -12,6 +12,7 @@
   }
 
   &-text {
+    position: relative;
     max-width: 570px;
     display: inline-block;
     margin-top: 150px;
@@ -40,7 +41,218 @@
     }
 
     &__part-1 {
-      color: #fff;
+      // background-color: #fff;
+
+      &_animated {
+        display: inline-block !important;
+        background-color: $mainGray;
+        background-position-x: -567px;
+
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-background-clip: text;
+        -moz-text-fill-color: transparent;
+        -ms-background-clip: text;
+        -ms-text-fill-color: transparent;
+
+        background-clip: text;
+        text-fill-color: transparent;
+
+        background-image: url(../../images/text-anim-bg-white.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        -webkit-animation: anim 5s linear;
+        -moz-animation: anim 5s linear;
+        -ms-animation: anim 5s linear;
+        animation: anim 5s linear;
+        animation-delay: 1s;
+
+        &_1 {
+        }
+        &_2 {
+          animation-delay: 1.3s;
+        }
+        &_3 {
+          animation-delay: 1.7s;
+        }
+
+        &:before {
+          position: absolute;
+          content: "";
+
+          z-index: -2;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          background-size: cover;
+          -webkit-animation: anim 5s linear;
+          -moz-animation: anim 5s linear;
+          -ms-animation: anim 5s linear;
+          animation: anim 5s linear;
+          animation-delay: 1s;
+        }
+
+        &:after {
+          position: absolute;
+          content: "";
+
+          z-index: -1;
+          top: 0.125em;
+          right: 0.125em;
+          bottom: 0.125em;
+          left: 0.125em;
+          // background-color: #ffffff;
+        }
+      }
+    }
+
+    &__part-2 {
+      &_animated {
+        display: inline-block !important;
+        background-color: $mainGray;
+        background-position-x: -567px;
+
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-background-clip: text;
+        -moz-text-fill-color: transparent;
+        -ms-background-clip: text;
+        -ms-text-fill-color: transparent;
+
+        background-clip: text;
+        text-fill-color: transparent;
+
+        background-image: url(../../images/text-anim-bg-white.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        -webkit-animation: anim 5s linear;
+        -moz-animation: anim 5s linear;
+        -ms-animation: anim 5s linear;
+        animation: anim 5s linear;
+        animation-delay: 2.5s;
+
+        &_1 {
+          animation-delay: 2.5s;
+        }
+        &_2 {
+          animation-delay: 2.9s;
+          animation-duration: 3s;
+          animation-name: home-text-animation-main;
+          animation-fill-mode: forwards;
+        }
+        &_3 {
+          animation-delay: 3.8s;
+          animation-duration: 3s;
+          animation-name: home-text-animation-main;
+          animation-fill-mode: forwards;
+        }
+
+        &:before {
+          position: absolute;
+          content: "";
+
+          z-index: -2;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          background-size: cover;
+          -webkit-animation: anim 5s linear;
+          -moz-animation: anim 5s linear;
+          -ms-animation: anim 5s linear;
+          animation: anim 5s linear;
+          animation-delay: 1s;
+        }
+
+        &:after {
+          position: absolute;
+          content: "";
+
+          z-index: -1;
+          top: 0.125em;
+          right: 0.125em;
+          bottom: 0.125em;
+          left: 0.125em;
+          // background-color: #ffffff;
+        }
+      }
+    }
+
+    &__part-3 {
+      &_animated {
+        display: inline-block !important;
+        background-color: $mainGray;
+        background-position-x: -567px;
+
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-background-clip: text;
+        -moz-text-fill-color: transparent;
+        -ms-background-clip: text;
+        -ms-text-fill-color: transparent;
+
+        background-clip: text;
+        text-fill-color: transparent;
+
+        background-image: url(../../images/text-anim-bg-white.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        -webkit-animation: anim 5s linear;
+        -moz-animation: anim 5s linear;
+        -ms-animation: anim 5s linear;
+        animation: anim 5s linear;
+        animation-delay: 1s;
+
+        &_1 {
+          animation-delay: 5s;
+          animation-duration: 3s;
+          animation-name: home-text-animation-main;
+          animation-fill-mode: forwards;
+        }
+        &_2 {
+          animation-delay: 5.5s;
+          animation-duration: 3s;
+          animation-duration: 3s;
+          animation-name: home-text-animation-main;
+          animation-fill-mode: forwards;
+        }
+        &_3 {
+          animation-delay: 6.8s;
+          animation-duration: 3s;
+          animation-name: home-text-animation-main;
+          animation-fill-mode: forwards;
+        }
+
+        &:before {
+          position: absolute;
+          content: "";
+
+          z-index: -2;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          background-size: cover;
+          -webkit-animation: anim 5s linear;
+          -moz-animation: anim 5s linear;
+          -ms-animation: anim 5s linear;
+          animation: anim 5s linear;
+          animation-delay: 1s;
+        }
+
+        &:after {
+          position: absolute;
+          content: "";
+
+          z-index: -1;
+          top: 0.125em;
+          right: 0.125em;
+          bottom: 0.125em;
+          left: 0.125em;
+          // background-color: #ffffff;
+        }
+      }
     }
   }
   &__mobile-img {
@@ -53,7 +265,6 @@
   }
 
   &__startbtn {
-
     @include sm {
       margin-bottom: 57px;
       margin-left: 24px;
