--- a/app/scss/base/mixins.scss
+++ b/app/scss/base/mixins.scss
@@ -148,3 +148,23 @@
     background-color: transparent;
   }
 }
+
+@mixin animatedTextPart {
+  display: inline-block !important;
+  background-color: $mainGray;
+  background-position-x: -567px;
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  -ms-background-clip: text;
+  -ms-text-fill-color: transparent;
+
+  background-clip: text;
+  text-fill-color: transparent;
+
+  background-image: url(../../images/text-anim-bg-white.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
