--- a/app/scss/modules/about-us.scss
+++ b/app/scss/modules/about-us.scss
@@ -60,12 +60,52 @@
         line-height: 36px;
       }
 
-      &__link {
-        padding: 0 3px;
+      &-animbox {
+        position: relative;
+        // padding: 0 3px;
         display: inline-block;
         height: 50px;
-        color: #fff;
-        background-color: $mainBlue;
+        background-image: url(../../images/text-anim-bg-blue_long.svg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position-x: -567px;
+
+        &:first-of-type {
+          margin-right: 4px;
+
+          &:after {
+            content: ",";
+            position: absolute;
+            bottom: -10px;
+            right: -9px;
+            color: #fff;
+
+            @include lg {
+              bottom: -5px;
+              right: -6px;
+            }
+          }
+        }
+
+        @include lg {
+          height: 36px;
+        }
+        @include sm {
+          display: inline;
+          height: 32px;
+          margin-right: 0;
+          background-position-y: -3px;
+        }
+      }
+
+      &__link {
+        @include animatedTextPart;
+
+        // padding: 0 3px;
+        display: inline-block;
+        height: 50px;
+        background-color: #000;
+        background-position-x: -567px;
 
         @include lg {
           height: 36px;
@@ -103,7 +143,7 @@
 
     &__link {
       opacity: 0;
-      
+
       &:before {
         content: "";
         display: block;
